--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "express":"^5.0.0-alpha.8",
-    "mysql":"^2.18.1"
+    "mysql":"^2.18.1",
+    "url":"^0.11.0"
   }
 }
